k8s_deployments/nginx_controller/namespace.yaml
## namespace.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx

#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: shippy-grpc
