k8s_deployments/nginx_controller/nginx_ingress_REST_rules.yaml
## nginx_ingress_REST_rules.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: nginx-ingress-rest
  namespace: kube-system
spec:
  tls:
  - hosts:
    - delivery.gship.com
    secretName: delivery-secret
  rules:
  - host: delivery.gship.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getShippment
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getCarrier
        backend:
          serviceName: client
          servicePort: 5000
