k8s_deployments/nginx_controller/nginx_ingress_gRPC_rules.yaml
## nginx_ingress_gRPC_rules.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  name: nginx-ingress-grpc
  namespace: kube-system
spec:
  tls:
  - hosts:
    - delivery.gship.com
    secretName: delivery-secret
  rules:
  - host: delivery.example.com
    http:
      paths:
      - path: /Carrier/GetCarrier
        backend:
          serviceName: carrier
          servicePort: 50052
      - path: /Shippment/GetShippment
        backend:
          serviceName: shippment
          servicePort: 50051
      - path: /Shippment/GetCarrierForShippment
        backend:
          serviceName: shippment
          servicePort: 50051
